[project]
name = "fun-project"
version = "0.1.0"
description = "Code for \"Techniques in Diagnosing and Mitigating Fitting to Confounding EEG Signals\""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "braindecode>=1.4.0",
    "matplotlib>=3.10.8",
    "moabb>=1.5.0",
    "numpy>=2.4.2",
    "pyriemann>=0.10",
    "scikit-learn>=1.8.0",
    "skorch>=1.3.1",
    "torch>=2.11.0",
    "xgboost>=3.2.0",
]
